# ferramenta

./: LICENSE  README.md  pyproject.toml
docs/: 01-visao-geral.md  02-arquitetura.md  03-grammar.md  03-modulos.md  04-constructos.md  04-exemplos.md  05-plugins.md  05-roadmap.md  06-exemplos.md  06-plugins.md  07-roadmap.md  08-uso.md  publicar-pypi.md
docs/modulos/: api.md  browser.md  desktop.md  email.md  excel.md  excel_com.md  files.md  ini.md  json.md  log.md  sql.md
src/rpaflow/: __init__.py  _exceptions.py  api.py  browser.py  desktop.py  email.py  excel.py  excel_com.py  files.py  ini.py  json.py  log.py  sql.py
