[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpaflow"
version = "0.1.0"
description = "Biblioteca Python modular para automação RPA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[project.optional-dependencies]
sql = ["pymysql>=1.0"]
sql-postgresql = ["psycopg2-binary>=2.9"]
sql-sqlserver = ["pyodbc>=5.0"]
sql-all = ["pymysql>=1.0", "psycopg2-binary>=2.9", "pyodbc>=5.0"]
excel = ["openpyxl>=3.1"]
excel-com = ["pywin32>=306"]
browser = ["playwright>=1.40"]
desktop = ["pyautogui>=0.9", "opencv-python>=4.8", "pillow>=10.0"]
log = ["loguru>=0.7"]
ini = []
api = ["httpx>=0.25"]
all = ["rpaflow[sql,excel,excel-com,browser,desktop,log,ini,api,sql-postgresql,sql-sqlserver]"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/rpaflow"]
